# screen-python-pysimplegui

./: pyproject.toml  tela.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
