[tool.poetry]
name = "pysimpleguitutorial"
version = "0.1.0"
description = ""
authors = ["PauloHeleno <helenop16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pysimplegui = "^4.60.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
